# my-blogs

./: .gitignore  README.md  about.markdown  about.rst  index.html  my-blogs.cabal  publish.sh  site.hs  stack.yaml  thoughts.markdown
css/: default.css  predefault.css  reset.css  syntax.css  test-ts.css  ts.css
posts/: 2021-01-10-OldBlog.markdown  2021-01-15-maybe-harmful.markdown  2021-01-16-maybe-harmful.markdown  2021-01-17-maybe-overuse.markdown  2021-01-31-alternative.markdown  2021-02-13-alternative.markdown  2021-05-30-dystopia.markdown  2021-05-30-nothingworks.markdown  2021-06-28-polysemy-arrows.markdown  2021-06-30-heroland.markdown  2021-07-10-polysemy-arrows.markdown  2021-07-18-prob-tree-scheme.markdown  2021-12-01-hss-typescript.md  2021-12-01-types-in-ts.md  2021-12-10-ts-types-part1.md  2021-12-12-ts-types-part1.md  2021-12-24-ts-types-part2.md  2021-12-25-ts-types-part2.md  2022-01-03-ts-types-part3.md  2022-01-03-ts-types-part4.md  2022-01-05-Styling.markdown  2022-01-09-ts-types-part4.md  2022-01-10-ts-types-part3.md  2022-02-13-ts-types-part5.md  2022-03-13-ts-types-part6.md  2022-08-20-code-cognitiveload.md  2022-08-20-cognitivedebt.md  2022-08-30-code-cognitiveload.md  2022-08-30-emirical-programming.md  2022-09-20-emirical-programming.md  2022-10-20-emirical-programming.md  2022-10-20-empirical-programming.md  2022-11-07-empirical-programming.md  2023-05-01-FP-quality-errors-p0.md  2023-05-15-FP-refactor-errors-p0.md
templates/: archive-list.html  archive.html  default.html  featured-list.html  post.html  tag.html
